# hd

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  IDE_SETUP.md  README.md  SOLVER_ANALYSIS.md  generate_test_determinant.py  generate_test_solver.py  generated_test_cases_solver.txt  hd_determinant.hpp  hd_determinant_test.cpp  hd_error.hpp  hd_functions.hpp  hd_functions_test.cpp  hd_ga.hpp  hd_ga_test.cpp  hd_keypress.hpp  hd_solver.hpp  hd_solver_test.cpp  hd_stencil.hpp  hd_stop_watch.hpp  hd_string_trim.hpp  hd_thrdsf_queue.hpp  hd_thrdsf_stack.hpp
ga/: CMakeLists.txt  hd_ga.hpp  hd_ga_cfg_2d_ops.hpp  hd_ga_cfg_3d_ops.hpp  hd_ga_cfg_algebra.hpp  hd_ga_cfg_bivec3d.hpp  hd_ga_cfg_mcplx2d.hpp  hd_ga_cfg_mcplx3d.hpp  hd_ga_cfg_mvec2d.hpp  hd_ga_cfg_mvec2d_e.hpp  hd_ga_cfg_mvec3d.hpp  hd_ga_cfg_mvec3d_e.hpp  hd_ga_cfg_mvec3d_u.hpp  hd_ga_cfg_pscalar2d.hpp  hd_ga_cfg_pscalar3d.hpp  hd_ga_cfg_scalar.hpp  hd_ga_cfg_scalar2d.hpp  hd_ga_cfg_scalar3d.hpp  hd_ga_cfg_strong_t.hpp  hd_ga_cfg_value_t.hpp  hd_ga_cfg_vec2d.hpp  hd_ga_cfg_vec3d.hpp  hd_ga_lua.cpp  hd_ga_lua.hpp  hd_ga_lua.lua  hd_ga_test.cpp  hd_ga_usr_consts.hpp  hd_ga_usr_types.hpp  hd_ga_usr_utilities.hpp
